@@ -42,78 +42,11 @@ using namespace std;
 #include"data.h"
 #include"messages.h"
 #include"win32.h"
+#include"sanity_defines.h"
 
 //Let's dump the data files into the source code. That sounds like fun, right?
 
-static const char _datfeat[]="\x11\x03\x0E"
-// 00              04              08              0C
-"\x7F\x5F\x5F\x7F\x5F\x06\x59\x0F\x01\x0F\x0D\x0F\x01\x00\x54"
-"\x00\x00\x00\x00\x00\x00\x00\x01\xFF\x01\x02\x00\xFF\xFF\x00";
-// First line: OR of the appropriate bits from enum ActBit
-//    {ACT0=1,ACT1=2,ACT3=4,ACT4=8,EMPTY1=0x10,OVERRIDE3=0x20,GENERIC3=0x40};
-// Second line: Std action 2 format:
-// 0: Vehicle style		1: House style		2: Ind. prod style
-// FF: No std 2 for this feature
 
-//third chawmp: 0x:default 1x:quote 2x:decimal 3x:B-E hex (2x and 3x are currently unsupported)
-//The upper chawmp, which only applies in FE strings:
-//0x:default  Cx:linebreak;long lead
-//Full description in act0.cpp.
-static const char _dat0[]="\x0B\x05"
-"\x22\xFF\x01\x21\x21\x01\x01\x21\x01\x22\xFF\x22\xFF\x01\x04\xFF\xFF\xFF\x01\x01\x21\x01\x01\x01\x01\x01\x01\x22\x01\x34\x01\x01\x01\x01\x01\x21\x01\x01\x21\x01\x32\x32\x04\x00"
-"\x22\xFF\x01\x21\x21\xFF\x01\x21\x21\x01\x04\xFF\xFF\xFF\x01\x21\x01\x01\x01\x21\x21\x21\x34\x01\x01\x01\x01\x21\x01\x32\x32\x04\x00"
-//                                 08                              10                              18                              20                              28
-"\x22\xFF\x01\x21\x21\xFF\x01\x21\x01\x01\x01\x21\x01\x22\xFF\x01\x01\x34\x01\x01\x01\x01\x21\x01\x32\x32\x04\x00"
-"\x22\xFF\x01\x21\x21\xFF\x01\x21\x01\x01\x01\x01\x21\x01\x01\x22\xFF\x21\x01\x34\x01\x01\x21\x01\x32\x32\x04\x00"
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x14\xFE\x01\x01\x01\x01\xFE\x01\x22\x01\x34\x01\x01\x01\x32\x21\x02\x00"
-  "\x03r\xFE\x80\x00"//                ^^
-	"l\\\x00l\\\x00l\\\x00l\\\x00|\x34*\xFE\x01\x80\x00"
-	  "\x01\x01\x01\x01\x01\x01\x34\x00"
-  "*\xFE\x02\\\x00\\\x00\x00" //                           ^^
-	"\x01\x01r\x01x\x80\x81\xC0\x00"
-"\x00"
-//                                 08                              10
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x21\x21\x21\x01\x22\xFE\x01\x04\x00"
-  "\x01\x01r\x34x\x81\x20\xC0\x00"//                   ^^
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x02\x01\x01\x01\x01\x01\x22\x01\x32\x02\x01\x01\x01\x04\x01\x01\x01\x01\x01\x01\x04\x00"
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x14\x32\x24\x12\x14\x14\x22\xFE\x00"
-  "r\xFE\x0B\xFE\x00"//                                           ^^
-	"r\x01\x20\xC0\x00"
-	"r\x01\x20\x00"
-//                                 08                              10                              18                              20
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x02\x02\x02\x01\x01\x02\x01\x01\x01\x00"
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\xFE\x01\x02\x02\x02\x01\x02\x04\x01\x01\x01\xFE\xFE\x01\x01\x01\x04\x02\x04\x04\x04\x02\x04\x01\x01\x00"
-  "\x01\xF4r\xFE\x80\x00"//                ^^
-	"l\xFE\x01\xC1|*\xFE\x02\\\x00\x80\x00"
-	  "\x00"
-	  "\x01\x01\xFE\xC0\x00"
-		"l\xFE\x02|\x01\x00"
-		  "\x00"
-  "\x01r\x01\x80\x00"//                                                                ^^
-  "r\x01\x03\x00"//                                                                        ^^
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x21\x32\x32\x32\x32\x32\x32\x01\x01\x01\x34\x01\x01\x01\x32\x14\x01\x32\x01\x00"
-//                                 08                              10                              18
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x01\x00"
-"\x00"
-"\x00";
-
-static const char _dat2v[]="\x0A\x04\x0F"
-	"\x00\x82\x01\x81\x02\x81\x03\x81\x09\x82\x0A\x82\x0C\x82\x10\x84\x18\x84\x1A\x84\x1B\x81\x1C\x84\xFF\xF0"
-"\x00\x40\x83\x41\x83\x42\x84\x43\x84\x45\x83\x46\x84\x47\x84\x48\x81\x5F\x81\x60\x81\x73\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
-"\x01\x40\x83\x41\x83\x42\x83\x43\x84\x46\x84\x47\x84\x48\x81\x5F\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
-"\x02\x42\x81\x43\x84\x46\x84\x47\x84\x48\x81\x5F\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
-"\x03\x40\x83\x42\x81\x43\x84\x46\x84\x48\x81\x44\x82\x47\x84\x5F\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
-"\x08\x11\x81\x40\x84\x41\x84\x42\x82\x43\x83\x44\x81\x45\x82\x46\x84\x47\x84\x48\x85\x49\x84\x4A\x81\x5F\x83\x60\x82\x1F\x61\x81\x1F\x62\x84\x1F\x63\x81\x1F\x64\x82\x1F\x65\x81\x1F\x66\x84\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
-"\x05\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x82\x80"
-"\x00\x40\x83\x41\x83\x42\x84\x43\x84\x45\x83\x46\x84\x47\x84\x48\x81\x5F\x81\x60\x81\x73\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
-"\x08\x40\x81\x41\x81\x42\x81\x43\x81\x44\x84\x45\x81\x46\x81\x5F\x81\x60\x82\x6B\x61\x82\xFF\x62\x84\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80"
-"\x08\x40\x81\x41\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xDE\x80"
-"\x0A\x40\x81\x41\x81\x42\x81\x43\x83\x44\x81\x5F\x81\x60\x84\xFF\x61\x84\xFF\x62\x82\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80"
-"\x08\x40\x82\x41\x82\x42\x82\x43\x82\x60\x82\xFF\x61\x81\xFF\x62\x84\xFF\x63\x84\xFF\x64\x84\xFF\x65\x83\xFF\x66\x83\xFF\x67\x84\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xB6\x80"
-"\x0B\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80"
-"\x0C\x80\x80"
-"\x0D\x80\x80"
-"\x0E\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80";
 //Format: Bitmask
 //Bit(s)			Meaning
 //0,1,2				valid width(s) (B,W,D) (If all are clear, this is a bitmask-variable.)
@@ -122,14 +55,7 @@ static const char _dat2v[]="\x0A\x04\x0F"
 //7					read in 7
 //                                          80                              88                              90                              98                              A0
 static const char _dat79Dv[]="\x20\x01\x20\x00\x00\x00\xC7\xC5\x80\x80\x00\x84\x00\x00\xC6\x00\xC1\xE1\xE4\x00\x00\xC1\xE6\xE6\xE6\xE6\xE1\x00\x24\x87\x00\x00\xC4\xE4\x24";
-static const char _datD[]="\x13\x01"
-	"\x10\x0C"        /*GRM count:*/"\x74\x00\x58\x00\x0B\x00\x29\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1E\x13\x00\x00\x00\x00\x40\x00\x00\x00\x00\x00\x00\x00";
-//Feature:                             --00--                          --04--                          --08--                          --0C--
-static const char _datIDs[]="\x76\x01\x73\x00\x57\x00\x0A\x00\x28\x00\xFF\x00\x04\x00\x0A\x00\xFF\x00\x00\x00\xFF\x00\x24\x00\x1F\x00\xFF\xFF\x00\x00\x00\x00";
-static const char _dat4[]="\x02\x01"
-"\x04\x04\x04\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
-// 00              04              08              0C
-"\x1C\x1C\x1C\x1C\x04\x04\x00\x04\x00\x1C\x1D\x06\x00\x00\x00";
+
 static const char _datB[]="\x01\x01\x03\x06\x02\x02\x02\x03\x02\x02";
 
 // Bit 15 set if recolor block, bit 14 set if mixed block
@@ -172,10 +98,6 @@ static const char _datcallbacks[]="\x05\x06\x46\x01"
 "\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80"
 "\x04\x04\x04\x07\x0C\x0B";
 
-//byte triples: num 80 bits/num 83 bits/num triggers
-//                                    --  00  --                                      --  04  --                                      --  08  --                                      --  0C  --
-static const char _dat2r[]="\x01\x01\x08\x08\x05\x08\x08\x05\x08\x08\x05\x08\x08\x05\x20\x00\x06\x00\x00\x00\x00\x00\x00\x08\x00\x02\x00\x00\x00\x08\x10\x03\x10\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00";
-
 static const char _datlangs[]="\x00\x01"
 //		x0				x1				x2				x3				x4				x5				x6				x7				x8				x9				xA				xB				xC				xD				xE				xF
 /*0x*/	"American\n"	"English\n"		"German\n"		"French\n"		"Spanish\n"		"\n"			"\n"			"Russian\n"		"\n"			"\n"			"\n"			"\n"			"\n"			"\n"			"\n"			"\n"
@@ -190,13 +112,107 @@ static const char _datlangs[]="\x00\x01"
 static const char _datversions[]="\x00\x04\x09"
 "\xD8\x01\x31\x06\x81\x07\x70\x11";
 
-/*** Add data file data here ***/
+/*****************************************************************************
+ *
+ * Files that are defined above this line (more accurately, those that appear
+ * before the DATA_FILE(feat) line in data.h) have two leading bytes that are
+ * checked and then eaten by myfopen. The first byte is a format byte; start
+ * it at \x00. Each time the file format gets updated (ie the file reader
+ * changes), increment it and reset the version byte to \x00. The second byte
+ * is a version byte; increment it every time the file gets updated. 
+ *
+ *****************************************************************************/
 
-/* The first byte of each _dat* is a format byte; start it at \x00. Each
- * time the file format gets updated (ie you change the file reader),
- * increment it and reset the version byte to \x00. The second byte is a
- * version byte; increment it every time the file gets updated.
- * These bytes are never seen except in myfopen()*/
+// The above also applies for feat.dat.
+
+static const char _datfeat[]="\x11\x03\x0E"
+// 00              04              08              0C
+"\x7F\x5F\x5F\x7F\x5F\x06\x59\x0F\x01\x0F\x0D\x0F\x01\x00\x54"
+"\x00\x00\x00\x00\x00\x00\x00\x01\xFF\x01\x02\x00\xFF\xFF\x00";
+// First line: OR of the appropriate bits from enum ActBit
+//    {ACT0=1,ACT1=2,ACT3=4,ACT4=8,EMPTY1=0x10,OVERRIDE3=0x20,GENERIC3=0x40};
+// Second line: Std action 2 format:
+// 0: Vehicle style		1: House style		2: Ind. prod style
+// FF: No std 2 for this feature
+
+//third chawmp: 0x:default 1x:quote 2x:decimal 3x:B-E hex (2x and 3x are currently unsupported)
+//The upper chawmp, which only applies in FE strings:
+//0x:default  Cx:linebreak;long lead
+//Full description in act0.cpp.
+static const char _dat0[]="\x0C\x00\x0E"
+"\x22\xFF\x01\x21\x21\x01\x01\x21\x01\x22\xFF\x22\xFF\x01\x04\xFF\xFF\xFF\x01\x01\x21\x01\x01\x01\x01\x01\x01\x22\x01\x34\x01\x01\x01\x01\x01\x21\x01\x01\x21\x01\x32\x32\x04\x00"
+"\x22\xFF\x01\x21\x21\xFF\x01\x21\x21\x01\x04\xFF\xFF\xFF\x01\x21\x01\x01\x01\x21\x21\x21\x34\x01\x01\x01\x01\x21\x01\x32\x32\x04\x00"
+//                                 08                              10                              18                              20                              28
+"\x22\xFF\x01\x21\x21\xFF\x01\x21\x01\x01\x01\x21\x01\x22\xFF\x01\x01\x34\x01\x01\x01\x01\x21\x01\x32\x32\x04\x00"
+"\x22\xFF\x01\x21\x21\xFF\x01\x21\x01\x01\x01\x01\x21\x01\x01\x22\xFF\x21\x01\x34\x01\x01\x21\x01\x32\x32\x04\x00"
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x14\xFE\x01\x01\x01\x01\xFE\x01\x22\x01\x34\x01\x01\x01\x32\x21\x02\x00"
+  "\x03r\xFE\x80\x00"//                ^^
+	"l\\\x00l\\\x00l\\\x00l\\\x00|\x34*\xFE\x01\x80\x00"
+	  "\x01\x01\x01\x01\x01\x01\x34\x00"
+  "*\xFE\x02\\\x00\\\x00\x00" //                           ^^
+	"\x01\x01r\x01x\x80\x81\xC0\x00"
+"\x00"
+//                                 08                              10
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x21\x21\x21\x01\x22\xFE\x01\x04\x00"
+  "\x01\x01r\x34x\x81\x20\xC0\x00"//                   ^^
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x02\x01\x01\x01\x01\x01\x22\x01\x32\x02\x01\x01\x01\x04\x01\x01\x01\x01\x01\x01\x04\x00"
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x14\x32\x24\x12\x14\x14\x22\xFE\x00"
+  "r\xFE\x0B\xFE\x00"//                                            ^^
+	"r\x01\x20\xC0\x00"
+	"r\x01\x20\x00"
+//                                 08                              10                              18                              20
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x02\x02\x02\x01\x01\x02\x01\x01\x01\x00"
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\xFE\x01\x02\x02\x02\x01\x02\x04\x01\x01\x01\xFE\xFE\x01\x01\x01\x04\x02\x04\x04\x04\x02\x04\x01\x01\x00"
+  "\x01\xF4r\xFE\x80\x00"//                ^^
+	"l\xFE\x01\xC1|*\xFE\x02\\\x00\x80\x00"
+	  "\x00"
+	  "\x01\x01\xFE\xC0\x00"
+		"l\xFE\x02|\x01\x00"
+		  "\x00"
+  "\x01r\x01\x80\x00"//                                                                ^^
+  "r\x01\x03\x00"//                                                                        ^^
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x21\x32\x32\x32\x32\x32\x32\x01\x01\x01\x34\x01\x01\x01\x32\x14\x01\x32\x01\x00"
+//                                 08                              10                              18
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x01\x00"
+"\x00"
+"\x00";
+
+static const char _dat2v[]="\x0B\x00\x0E\x0F"
+	"\x00\x82\x01\x81\x02\x81\x03\x81\x09\x82\x0A\x82\x0C\x82\x10\x84\x18\x84\x1A\x84\x1B\x81\x1C\x84\xFF\xF0"
+"\x00\x40\x83\x41\x83\x42\x84\x43\x84\x45\x83\x46\x84\x47\x84\x48\x81\x5F\x81\x60\x81\x73\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
+"\x01\x40\x83\x41\x83\x42\x83\x43\x84\x46\x84\x47\x84\x48\x81\x5F\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
+"\x02\x42\x81\x43\x84\x46\x84\x47\x84\x48\x81\x5F\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
+"\x03\x40\x83\x42\x81\x43\x84\x46\x84\x48\x81\x44\x82\x47\x84\x5F\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
+"\x08\x11\x81\x40\x84\x41\x84\x42\x82\x43\x83\x44\x81\x45\x82\x46\x84\x47\x84\x48\x85\x49\x84\x4A\x81\x5F\x83\x60\x82\x1F\x61\x81\x1F\x62\x84\x1F\x63\x81\x1F\x64\x82\x1F\x65\x81\x1F\x66\x84\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
+"\x05\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x82\x80"
+"\x00\x40\x83\x41\x83\x42\x84\x43\x84\x45\x83\x46\x84\x47\x84\x48\x81\x5F\x81\x60\x81\x73\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xFF\xF0"
+"\x08\x40\x81\x41\x81\x42\x81\x43\x81\x44\x84\x45\x81\x46\x81\x5F\x81\x60\x82\x6B\x61\x82\xFF\x62\x84\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80"
+"\x08\x40\x81\x41\x81\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xDE\x80"
+"\x0A\x40\x81\x41\x81\x42\x81\x43\x83\x44\x81\x5F\x81\x60\x84\xFF\x61\x84\xFF\x62\x82\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80"
+"\x08\x40\x82\x41\x82\x42\x82\x43\x82\x60\x82\xFF\x61\x81\xFF\x62\x84\xFF\x63\x84\xFF\x64\x84\xFF\x65\x83\xFF\x66\x83\xFF\x67\x84\xFF\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\xB6\x80"
+"\x0B\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80"
+"\x0C\x80\x80"
+"\x0D\x80\x80"
+"\x0E\x7D\x84\xFF\x7E\x82\xFF\x7F\x84\x7F\x80\x80";
+static const char _datD[]="\x14\x00\x0E"
+	"\x10\x0C"            /*GRM count:*/"\x74\x00\x58\x00\x0B\x00\x29\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1E\x13\x00\x00\x00\x00\x40\x00\x00\x00\x00\x00\x00\x00";
+//Feature:                                 --00--                          --04--                          --08--                          --0C--
+static const char _datIDs[]="\x77\x00\x0E\x73\x00\x57\x00\x0A\x00\x28\x00\xFF\x00\x04\x00\x0A\x00\xFF\x00\x00\x00\xFF\x00\x24\x00\x1F\x00\xFF\xFF\x00\x00\x00\x00";
+static const char _dat4[]="\x03\x00\x0E"
+"\x04\x04\x04\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
+// 00              04              08              0C
+"\x1C\x1C\x1C\x1C\x04\x04\x00\x04\x00\x1C\x1D\x06\x00\x00\x00";
+
+//byte triples: num 80 bits/num 83 bits/num triggers
+//                                        --  00  --                                      --  04  --                                      --  08  --                                      --  0C  --
+static const char _dat2r[]="\x02\x00\x0E\x08\x08\x05\x08\x08\x05\x08\x08\x05\x08\x08\x05\x20\x00\x06\x00\x00\x00\x00\x00\x00\x08\x00\x02\x00\x00\x00\x08\x10\x03\x10\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00";
+
+/* Files that depend on feat.dat (appear below it in data.h), have three
+ * leading bytes that are eaten by myfopen. The first two are as described
+ * above, near line 120. The third is the maximum feature supported by this
+ * file. This should usually match the third byte of _datfeat, but under some
+ * circumstances, it is appropriate to increment the this byte without
+ * changing _datfeat. */
 
 struct dat{
 	char*data,*name;
@@ -269,7 +285,14 @@ FILE*tryopen(const char*name,const char*mode,bool allownull=false){
 FILE*_myfopen(files file){
 	FILE*pFile=tryopen(data[file].name,"rb",true);
 	if(pFile){
-		if(fgetc(pFile)==data[file].data[0]&&fgetc(pFile)>=data[file].data[1])return pFile;
+		if(fgetc(pFile)==data[file].data[0]&&fgetc(pFile)>=data[file].data[1]){
+			if(file>datfeat && (uint)fgetc(pFile)<MaxFeature()){
+				IssueMessage(0,DATAFILE_MISMATCH,data[file].name+8);
+				assert(false);
+				exit(EDATA);
+			}
+			return pFile;
+		}
 		fclose(pFile);
 	}
 	pFile=tryopen(data[file].name,"wb");
@@ -282,6 +305,11 @@ FILE*_myfopen(files file){
 	pFile=tryopen(data[file].name,"rb");
 	fgetc(pFile);
 	fgetc(pFile);
+	if(file>datfeat && (uint)fgetc(pFile)<MaxFeature()){
+		IssueMessage(0,DATAFILE_MISMATCH,data[file].name+8);
+		assert(false);
+		exit(EDATA);
+	}
 	return pFile;
 }
 
